# img2ascii

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ascii_manipulation.rs  cli.rs  image_manipulation.rs  main.rs  model_rgb_ascii.rs  output.rs
