[package]
name = "img2ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.*"
dotenvy = "0.15.*"
log = "0.4.*"
clap = { version = "4.1.*", features = ["derive"] }
image = "0.24.*"
termion = "2.0.*"