[package]
name = "img2ascii"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.*"
dotenvy = "0.15.*"
log = "0.4.*"
clap = { version = "4.1.*", features = ["derive"] }
image = { version = "0.24.*", features = ["webp-encoder"] }
#termion = "2.0.*"
crossterm = "0.26.*"
